--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "brackets/craftable": "^6.0",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
+        "garygreen/pretty-routes": "^1.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/cashier": "^12.6",
         "laravel/framework": "^8.12",
