--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.3|^8.0",
         "berndengels/laravel8-email-exceptions": "^1.0",
         "brackets/craftable": "^6.0",
+        "bumbummen99/shoppingcart": "^3.0",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "garygreen/pretty-routes": "^1.0",
