--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -7,5 +7,5 @@
     "/css/dark.css": "/css/dark.css",
     "/vendor/calendar/css/zabuto_calendar.min.css": "/vendor/calendar/css/zabuto_calendar.min.css",
     "/vendor/calendar/js/zabuto_calendar.min.js": "/vendor/calendar/js/zabuto_calendar.min.js",
-    "/vendor/jstree/js/jstree.js": "/vendor/jstree/js/jstree.js"
+    "/vendor/jstree/js/jstree.min.js": "/vendor/jstree/js/jstree.min.js"
 }
