--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "kalnoy/nestedset": "^5.0",
         "kris/laravel-form-builder": "^1.40",
         "laravel/cashier": "^12.6",
-        "laravel/framework": "^8.12",
+        "laravel/framework": "8.16",
         "laravel/telescope": "^4.3",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.1",
