--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "jstree": "^3.3.10",
         "leaflet": "^1.7.1",
         "uglify-js": "^3.4.10",
-        "utf-8-validate": "^5.0.3"
+        "utf-8-validate": "^5.0.3",
+        "vue-jstree": "^2.1.6"
     }
 }
