--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,12 @@
     "require": {
         "php": "^7.3|^8.0",
         "anhskohbo/no-captcha": "^3.3",
+        "barryvdh/laravel-dompdf": "^0.9.0",
         "bepsvpt/secure-headers": "^7.0",
         "berndengels/laravel8-email-exceptions": "^1.0",
         "brackets/craftable": "^7.0",
         "bumbummen99/shoppingcart": "^3.0",
+        "dompdf/dompdf": "^1",
         "eluceo/ical": "^0.16.1",
         "fideloper/proxy": "^4.4",
         "friendsofphp/php-cs-fixer": "^2.17",
