--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -3,6 +3,7 @@
     "/js/app.js": "/js/app.js",
     "/css/admin.css": "/css/admin.css",
     "/css/app.css": "/css/app.css",
+    "/css/pdf.css": "/css/pdf.css",
     "/css/red.css": "/css/red.css",
     "/css/dark.css": "/css/dark.css",
     "/js/payment-stripe.js": "/js/payment-stripe.js",
