--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.19",
-        "bootstrap": "^4.0.0",
+        "axios": "^0.21.1",
+        "bootstrap": "^4.6.0",
         "cross-env": "^7.0",
         "jquery": "^3.5.1",
         "laravel-mix": "^5.0.1",
@@ -27,6 +27,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.1",
         "@stripe/stripe-js": "^1.11.0",
+        "@ttskch/select2-bootstrap4-theme": "^1.5.2",
         "craftable": "^2.2.0",
         "ekko-lightbox": "^5.3.0",
         "include-media": "^1.4.9",
@@ -35,6 +36,7 @@
         "jsdom": "^16.4.0",
         "jstree": "^3.3.10",
         "leaflet": "^1.7.1",
+        "select2": "^4.1.0-rc.0",
         "trumbowyg": "^2.23.0",
         "uglify-js": "^3.4.10",
         "utf-8-validate": "^5.0.3",
