--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@ttskch/select2-bootstrap4-theme": "^1.5.2",
         "craftable": "^2.2.0",
         "ekko-lightbox": "^5.3.0",
+        "follow-redirects": "^1.13.3",
         "include-media": "^1.4.9",
         "ionicons": "^5.2.3",
         "jquery-lazy": "^1.7.11",
