--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ public_html
 /storage/app/public/8/
 /database/dumps/20210116_schokoladen_test.sql
 /package-lock.json
+/resources/js/config/_env.js
