--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "uglify-js": "^3.4.10",
         "utf-8-validate": "^5.0.3",
         "vue-jstree": "^2.1.6",
-        "vue-loader": "^15.9.6"
+        "vue-loader": "^15.9.6",
+        "vuex": "^3.6.2"
     }
 }
